--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -13,15 +13,15 @@ html {
   // @include respond(big-desktop) {
   //   font-size: 75%;
   // }
-  // @include respond(tab-land) {
-  //   font-size: 56.25%;
-  // }
-  // @include respond(tab-port) {
-  //   font-size: 50%;
-  // }
-  // @include respond(phone) {
-  //   font-size: 35%;
-  // }
+  @include respond(tab-land) {
+    font-size: 56.25%;
+  }
+  @include respond(tab-port) {
+    font-size: 50%;
+  }
+  @include respond(phone) {
+    font-size: 35%;
+  }
 }
 
 body {
