--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,6 +2,7 @@
   height: 100vh;
   max-width: 114rem;
   margin: auto;
+  padding: 5rem;
 
   &__text {
     position: absolute;
@@ -28,6 +29,6 @@
   &__bio {
     font-size: 2.3rem;
     font-weight: 400;
-    display: block;
+    margin-right: 5rem;
   }
 }
