--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -22,6 +22,7 @@
     list-style: none;
     max-width: 114rem;
     margin: 0 auto;
+    padding-right: 5rem;
   }
 
   &__item {
